Issue on page /input_files/SUEWS_SiteInfo/Typical_Values.html Fixes #70

--- a/docs/source/assets/refs/refs-others.bib
+++ b/docs/source/assets/refs/refs-others.bib
@@ -249,13 +249,6 @@ EXCHANGE},
  month = sep,
 }
 
-@inproceedings{FN78,
- author = {Falk, J. and Niemczynowicz, J.},
- year = {1978},
- booktitle = {Proc. Internat. Conf. on Urban Storm Drainage},
- title = {Characteristics of the above ground runoff in sewered catchments},
-}
-
 @incollection{H79,
  author = {Halldin, S. and Grip, H. and Perttu, K.},
  doi = {10.1016/b978-0-444-41844-9.50012-3},
@@ -656,7 +649,7 @@ EXCHANGE},
  url = {https://doi.org/10.1017/cbo9781139629218},
 }
 
-@book{oke2002boundary,
+@book{O02,
  author = {Oke, T. R.},
  title = {Boundary Layer Climates},
  year = {2002},
@@ -748,4 +741,267 @@ EXCHANGE},
  pages = {1196-1207},
  source = {Crossref},
  publisher = {American Meteorological Society},
+}
+
+@article{A99,
+ author = {Anandakumar, K.},
+ title = {A study on the partition of net radiation into heat fluxes on a dry asphalt surface},
+ volume = {33},
+ issn = {1352-2310},
+ url = {https://doi.org/10.1016/s1352-2310(99)00133-8},
+ doi = {10.1016/s1352-2310(99)00133-8},
+ abstract = {Variation of the energy budget components of a dry asphalt surface over an annual cycle is discussed based on the analysis of data collected from a micrometeorological road station near Vienna, in Austria. Net radiation (RN) and ground heat flux (G) are directly measured. Sensible heat flux (H) for dry surface conditions is estimated as a residual of the surface energy balance. Throughout the year, ground heat flux is found to be of larger magnitude than that of the sensible heat flux. The partitioning of net radiation into ground and sensible heat fluxes are studied. Variation of G (and H) with RN showed hysteresis loop behaviour with anti-clockwise cycle (clockwise for H) during cooler periods and clockwise cycle (anti-clockwise for H) during warm periods. The coefficients of time-dependent Camuffo and Bernadi formulations relating the net radiation with the heat fluxes are estimated for different periods of the year.},
+ language = {en},
+ number = {24-25},
+ urldate = {2021-12-02},
+ journal = {Atmos. Environ.},
+ month = oct,
+ year = {1999},
+ keywords = {Asphalt surface, Energy budget, Ground heat flux, Sensible heat flux},
+ pages = {3911-3918},
+ source = {Crossref},
+ publisher = {Elsevier BV},
+}
+
+@article{AC93,
+ author = {Asaeda, Takashi and Ca, Vu Thanh},
+ year = {1993},
+ keywords = {Hysteresis Effect},
+ title = {The subsurface transport of heat and moisture and its effect on the environment: {A} numerical model},
+ journal = {Boundary-Layer Meteorol},
+ issn = {0006-8314, 1573-1472},
+ doi = {10.1007/bf00708822},
+ abstract = {{A numerical model was developed to study the transport of heat and vapor under the surface of bare soil and soil covered by some materials such as asphalt and concrete under no rainfall conditions. The computational results provide a good match with the experimental ...}},
+ pages = {159-179},
+ number = {1-2},
+ volume = {65},
+ source = {Crossref},
+ url = {https://doi.org/10.1007/bf00708822},
+ publisher = {Springer Science and Business Media LLC},
+ month = jul,
+}
+
+@article{D85,
+ author = {Doll, Dennis and Ching, J. K. S. and Kaneshiro, Jack},
+ year = {1985},
+ keywords = {Hysteresis Effect},
+ title = {Parameterization of subsurface heating for soil and concrete using net radiation data},
+ journal = {Boundary-Layer Meteorol},
+ issn = {0006-8314, 1573-1472},
+ doi = {10.1007/bf00122000},
+ abstract = {{The variability of surface sensible heat flux depends strongly on the heating rate of the material beneath the surface. This variability is expected to be large in urban areas where the surfaces are layered with a variety of man-made materials. Parameterization of the ground heat storage as a function of surface materials is presented based on analyses of data obtained during the U.S. Environmental Protection Agency's Regional Air Pollution Study conducted in St. Louis, Missouri. Ground heat flux data are derived from observations of surface and subsurface temperatures for a soil layer and for concrete slabs resting on soil. The data show that the presence of the concrete slabs increases the ground storage term relative to that for soil alone. The ground storage and sensible heat flux terms for a blackened concrete slab are larger than for an unpainted concrete slab. For the concrete surfaces, the ratio of ground storage to net radiation is >1 at night and <1 during the day. This ratio is discontinuous at sunrise and sunset transition periods. For soil, the ratio shows similar temporal behavior except that on average, there is a smoother transition at sunrise. Simple mathematical expressions giving the ratio of ground heat storage to net radiation as a function of time are presented.}},
+ pages = {351-372},
+ number = {4},
+ volume = {32},
+ source = {Crossref},
+ url = {https://doi.org/10.1007/bf00122000},
+ publisher = {Springer Science and Business Media LLC},
+ month = aug,
+}
+
+@article{MO09,
+ author = {Meyn, Stephanie K. and Oke, T.R.},
+ year = {2009},
+ keywords = {Hysteresis Effect,Surface Energy Balance},
+ title = {Heat fluxes through roofs and their relevance to estimates of urban heat storage},
+ journal = {Energ. Buildings},
+ issn = {0378-7788},
+ doi = {10.1016/j.enbuild.2009.02.005},
+ abstract = {{The storage heat flux constitutes a large term in the heat balance of cities. This flux is difficult to measure but one approach is to parameterize it using relations between the net all-wave radiation and the heat flux conducted into and out of the typical materials that form the surface of cities and combine them into a weighted average to give the bulk storage. Urban heat storage parameterization could be improved if there were more and better estimates of the net radiation vs. storage relation for typical urban and suburban roofs. This paper presents the results of a study of the heat storage characteristics of 6 different roof assemblies (typical of many North American commercial/industrial and residential buildings) in Vancouver, Canada, observed across a range of wind and moisture conditions. Further, these observations are used to verify the Simplified Transient Analysis of Roofs (STAR) model, which is then used to estimate the heat storage parameterization for other roof types, thereby extending the usefulness of the scheme to a wider range of urban areas.}},
+ pages = {745-752},
+ number = {7},
+ volume = {41},
+ language = {English},
+ local-url = {file://localhost/Users/sunt05/Documents/Papers},
+ source = {Crossref},
+ url = {https://doi.org/10.1016/j.enbuild.2009.02.005},
+ publisher = {Elsevier BV},
+ month = jul,
+}
+
+@article{Y90,
+ author = {Yoshida, Atsumasa and Tominaga, Kazuhide and Watatani, Shigeru},
+ year = {1990},
+ keywords = {Hysteresis Effect},
+ title = {Field measurements on energy balance of an urban canyon in the summer season},
+ journal = {Energ. Buildings},
+ issn = {0378-7788},
+ doi = {10.1016/0378-7788(90)90016-c},
+ url = {https://doi.org/10.1016/0378-7788(90)90016-c},
+ abstract = {{Field measurements on the energy balance of an east---west oriented urban canyon were performed continuously for several days in the summer season, as preliminary research of the heat transfer in the urban atmospheric boundary layer. The urban canyon consisted of concrete buildings, 16 m high and partially covered with windows, standing face to face across an asphalt road 17 m wide. The energy balance of the urban canyon is represented by the balance at the imaginary surface named ``the top surface''. The top surface is a plane above the canyon at the same level as the roof surface of the buildings. In the daytime, the energy budget into the top surface is much larger than that into the roof surface. At nighttime, there is no significant difference in the energy balance between the roof surface and the top surface.}},
+ pages = {417-423},
+ number = {3-4},
+ volume = {15},
+ language = {English},
+ source = {Crossref},
+ publisher = {Elsevier BV},
+ month = jan,
+}
+
+@book{T80,
+ author = {Taesler, Roger},
+ year = {1980},
+ keywords = {Hysteresis Effect},
+ title = {{Studies of the development and thermal structure of the urban boundary layer in uppsala. Part 1: {Experimental} program and Part 2: {Data} analysis and results. Rep. 61}},
+ isbn = {221015643},
+ url = {http://www.worldcat.org/title/studies-of-the-development-and-thermal-structure-of-the-urban-boundary-layer-in-uppsala/oclc/221015643},
+ urldate = {0},
+ series = {Uppsala, Sweden : Uppsala Universitetet},
+ publisher = {Uppsala, Sweden : Uppsala Universitetet},
+ language = {English},
+}
+
+@article{NO77,
+ author = {Nunez, M. and Oke, T. R.},
+ year = {1977},
+ keywords = {2015 Key,UCM,Urban Canyon,Urban Study},
+ title = {The Energy Balance of an Urban Canyon},
+ journal = {J. Appl. Meteor.},
+ doi = {10.1175/1520-0450(1977)016<0011:teboau>2.0.co;2},
+ abstract = {{... In most formulations of the urban energy balance it is normal to include an anthropogenic heat source ... The importance of canyon orientation on the energy balance is evident in Fig. 3. The north-south alignment results in maximum irradiance of the floor near solar noon, but on ...}},
+ pages = {11-19},
+ number = {1},
+ volume = {16},
+ language = {English},
+ month = jan,
+ source = {Crossref},
+ url = {https://doi.org/10.1175/1520-0450(1977)016<0011:teboau>2.0.co;2},
+ publisher = {American Meteorological Society},
+ issn = {0021-8952},
+}
+
+@article{MC85,
+ author = {McCaughey, J. H.},
+ year = {1985},
+ title = {Energy balance storage terms in a mature mixed forest at Petawawa, {Ontario} ? A case study},
+ journal = {Boundary-Layer Meteorol},
+ issn = {0006-8314, 1573-1472},
+ doi = {10.1007/bf00120036},
+ abstract = {{The energy storage terms for a mature mixed forest at Petawawa, Ontario are reported for 38 days in the summer of 1982 when the forest was in full leaf. Hourly, daily and daytime values of the storage terms are documented. The biomass storage term, Qv, should be calculated from measurement of biomass temperature change. For hourly periods, the storage terms can be of significant size with respect to net radiation, Q*. This is especially the case at ...}},
+ pages = {89-101},
+ number = {1},
+ volume = {31},
+ language = {English},
+ keywords = {},
+ source = {Crossref},
+ url = {https://doi.org/10.1007/bf00120036},
+ publisher = {Springer Science and Business Media LLC},
+ month = jan,
+}
+
+@phdthesis{N81,
+ author = {Novak, Michael David},
+ title = {The moisture and thermal regimes of a bare soil in the lower {Fraser} {Valley} during spring},
+ url = {https://open.library.ubc.ca/soa/cIRcle/collections/ubctheses/831/items/1.0095282},
+ abstract = {Half-hourly measurements of the surface energy balance components and soil temperatures were made at Agassiz, B.C., in the spring and early summer of 1978 at two adjacent bare-soil sites, one of which was culti-packed, while the other was disc-harrowed. The latent and sensible he},
+ language = {eng},
+ urldate = {2021-12-02},
+ school = {University of British Columbia},
+ year = {1981},
+ doi = {10.14288/1.0095282},
+ file = {Novak\_1981\_The moisture and thermal regimes of a bare soil in the lower Fraser Valley.pdf:/Users/sunt05/Dropbox/zotero-lib/Novak\_1981\_The moisture and thermal regimes of a bare soil in the lower Fraser Valley.pdf:application/pdf},
+}
+
+@article{FH72,
+ author = {Fuchs, Marcel and Hadas, Amos},
+ year = {1972},
+ title = {The heat flux density in a non-homogeneous bare loessial soil},
+ journal = {Boundary-Layer Meteorol},
+ issn = {0006-8314, 1573-1472},
+ doi = {10.1007/bf02033918},
+ abstract = {{This work describes the relationship between the diurnal patterns of the radiant energy exchange in the atmospheric surface layer and the soil heat flux density of a bare irrigated soil in an arid environment. The measurements show that the soil heat flux density is a large fraction of the net radiation. The soil moisture content has little effect on this fraction but modifies the phase relationship between the net radiation and the soil heat flux density waves. Differences between the thermal regimes of the `wet' and `dry' soil appear to be caused by latent heat exchanges rather than changes of the soil thermal properties. The data also show that the variation with depth of the soil thermal properties strongly influences the propagation of the temperature and heat flux density waves in the soil. A heat diffusion theory for non-homogeneous conductors (Lettau, 1962) which enables the thermal properties of the soil to be predicted is tested by comparison with experimental determinations in the field.}},
+ pages = {191-200},
+ number = {2},
+ volume = {3},
+ keywords = {},
+ source = {Crossref},
+ url = {https://doi.org/10.1007/bf02033918},
+ publisher = {Springer Science and Business Media LLC},
+ month = dec,
+}
+
+@phdthesis{Y73,
+ author = {Yap, David Hamilton},
+ title = {Sensible heat fluxes measured in and near {{Vancouver},} {{B}.{C}.}},
+ url = {https://open.library.ubc.ca/soa/cIRcle/collections/ubctheses/831/items/1.0101037},
+ abstract = {A yaw sphere-thermometer assembly (YST), to measure sensible heat flux density by the eddy correlation method, was built following the design of Tanner and Thurtell (1970). Wind tunnel experiments indicate that the sphere constant should be 1.57, which is significantly less than},
+ language = {eng},
+ urldate = {2021-12-02},
+ school = {University of British Columbia},
+ year = {1973},
+ doi = {10.14288/1.0101037},
+ file = {Yap\_1973\_Sensible heat fluxes measured in and near Vancouver, B.pdf:/Users/sunt05/Dropbox/zotero-lib/Yap\_1973\_Sensible heat fluxes measured in and near Vancouver, B.pdf:application/pdf},
+}
+
+@article{S98,
+ author = {South, Catherine and Susan, C. and Grimmond, B. and Wolfe, Charlotte P.},
+ year = {1998},
+ keywords = {Lake,Surface Energy Balance},
+ title = {Evapotranspiration rates from wetlands with different disturbance histories: {Indiana} Dunes National Lakeshore},
+ journal = {Wetlands},
+ issn = {0277-5212, 1943-6246},
+ doi = {10.1007/bf03161657},
+ url = {https://doi.org/10.1007/bf03161657},
+ abstract = {{This study examines the effects of different disturbance histories, specifically patterns of ditching and drainage on wetland evapotranspiration rates for two sites within the Indiana Dunes National L}},
+ pages = {216-229},
+ number = {2},
+ volume = {18},
+ language = {English},
+ source = {Crossref},
+ publisher = {Springer Science and Business Media LLC},
+ month = jun,
+}
+
+@article{G92,
+ author = {Grimmond, C. S. B.},
+ year = {1992},
+ keywords = {SUEWS,Anthropogenic Heat},
+ title = {The suburban energy balance: {Methodological} considerations and results for a mid-latitude west coast city under winter and spring conditions},
+ journal = {Int. J. Climatol.},
+ issn = {0899-8418, 1097-0088},
+ doi = {10.1002/joc.3370120506},
+ abstract = {{Previous measurements of the urban energy balance primarily have been conducted in summertime. This paper reports the first extended set of winter-spring-time energy balance measurements for a city. The study was conducted in a suburb of Vancouver, British Columbia, from January to June 1987. It included hourly measurements of net all-wave radiation, sensible heat flux and the Bowen ratio. The anthropogenic and storage heat fluxes were modelled. A dynamic source area model was employed to ensure the modelled parameters were consistent spatially with the measured turbulent fluxes. The winter-spring urban energy balances observed in this study are different to those reported for summertime conditions at the same site. The fluxes for the entire period are not symmetrical about solar noon. Hence earlier interpretations possibly should be modified. Apart from this feature the spring season balances are similar to those reported for the summertime in terms of relative importance of individual fluxes. The wintertime energy balance appears to be different to that of spring and summer. The most noticeable feature is the increased importance of the latent heat flux, which on average is the largest output flux in the balance. A secondary, more expected feature, is the increased importance of anthropogenic heat flux as an input in winter.}},
+ pages = {481-497},
+ number = {5},
+ volume = {12},
+ language = {English},
+ source = {Crossref},
+ url = {https://doi.org/10.1002/joc.3370120506},
+ publisher = {Wiley},
+ month = jul,
+}
+
+@article{N84,
+ author = {NARITA, Ken-ichi and SEKINE, Takeshi and TOKUOKA, Toshikazu},
+ year = {1984},
+ month = sep,
+ pages = {639-651},
+ title = {Thermal Properties Of Urban Surface Materials},
+ volume = {57},
+ journal = {Geogr. Rev. Jpn, Ser. A, Chirigaku Hyoron},
+ doi = {10.4157/grj1984a.57.9_639},
+ number = {9},
+ source = {Crossref},
+ url = {https://doi.org/10.4157/grj1984a.57.9_639},
+ publisher = {The Association of Japanese Geographers},
+ subtitle = {STUDY ON HEAT BALANCE AT ASPHALT PAVEMENT},
+ issn = {0016-7444, 2185-1735},
+}
+
+@inproceedings{DH81,
+ author = {Davies, Hilary and Hollis, T},
+ title = {Measurements of rainfall-runoff volume relationships and water balance for roofs and roads},
+ booktitle = {Second International Conference on Urban Storm Drainage},
+ volume = {434},
+ pages = {441},
+ year = {1981},
+}
+
+@inproceedings{FN78,
+ author = {Falk, J. and Niemczynowicz, J.},
+ year = {1978},
+ pages = {159-171},
+ booktitle = {Proc. Internat. Conf. on Urban Storm Drainage},
+ title = {Characteristics of the above ground runoff in sewered catchments},
+ publisher = {John Wiley and Sons, New York},
 }
