--- a/docs/source/tutorial/quick-start.ipynb
+++ b/docs/source/tutorial/quick-start.ipynb
@@ -19,33 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:44.151185Z",
      "start_time": "2020-07-05T21:59:43.333889Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "version       2022.9.19.dev1\n",
-      "iter                        \n",
-      "git_commit             dirty\n",
-      "dtype: object\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/Caskroom/mambaforge/base/envs/supy/lib/python3.9/site-packages/pandas/core/reshape/merge.py:916: FutureWarning: In a future version, the Index constructor will not infer numeric dtypes when passed object-dtype sequences (matching Series behavior)\n",
-      "  key_col = Index(lvals).where(~mask_left, rvals)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import supy as sp\n",
@@ -58,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:45.545172Z",
@@ -105,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:45.583917Z",
@@ -119,22 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:47.374729Z",
      "start_time": "2020-07-05T21:59:45.585575Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-09-20 22:56:41,347 - SuPy - INFO - All cache cleared.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_state_init = sp.init_supy(path_runcontrol)"
    ]
@@ -148,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:47.416286Z",
@@ -268,7 +241,7 @@
        "waterusemethod              0        0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,22 +259,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:50.069301Z",
      "start_time": "2020-07-05T21:59:47.417990Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-09-20 22:56:41,926 - SuPy - INFO - All cache cleared.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "grid = df_state_init.index[0]\n",
     "df_forcing = sp.load_forcing_grid(path_runcontrol, grid)\n",
@@ -326,22 +291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:52.924662Z",
      "start_time": "2020-07-05T21:59:50.072293Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-09-20 22:56:45,654 - SuPy - INFO - All cache cleared.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_state_init, df_forcing = sp.load_SampleData()\n",
     "grid = df_state_init.index[0]\n",
@@ -387,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:52.965867Z",
@@ -456,7 +413,7 @@
        "1        22.0     13.1     13.1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:53.009389Z",
@@ -546,7 +503,7 @@
        "1           0.43  0.38  0.0  0.02  0.03  0.0  0.14"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:56.443345Z",
@@ -666,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:56.492019Z",
@@ -736,7 +693,7 @@
        "1        0.43  0.38   0.0  0.02  0.03   0.0  0.14"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:56.533621Z",
@@ -788,7 +745,7 @@
        "Name: 2012-01-01 00:10:00, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:56.576315Z",
@@ -815,7 +772,7 @@
        "4.78"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T21:59:56.622433Z",
@@ -915,7 +872,7 @@
        "1         0.1   0.1   0.2   0.3  0.25  0.05     0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:15.589237Z",
@@ -955,15 +912,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-09-20 22:57:30,568 - SuPy - INFO - ====================\n",
-      "2022-09-20 22:57:30,569 - SuPy - INFO - Simulation period:\n",
-      "2022-09-20 22:57:30,569 - SuPy - INFO -   Start: 2012-01-01 00:05:00\n",
-      "2022-09-20 22:57:30,570 - SuPy - INFO -   End: 2012-12-31 23:55:00\n",
-      "2022-09-20 22:57:30,570 - SuPy - INFO - \n",
-      "2022-09-20 22:57:30,570 - SuPy - INFO - No. of grids: 1\n",
-      "2022-09-20 22:57:30,571 - SuPy - INFO - SuPy is running in serial mode\n",
-      "2022-09-20 22:57:41,038 - SuPy - INFO - Execution time: 10.5 s\n",
-      "2022-09-20 22:57:41,038 - SuPy - INFO - ====================\n",
+      "2022-09-20 23:01:15,236 - SuPy - INFO - ====================\n",
+      "2022-09-20 23:01:15,237 - SuPy - INFO - Simulation period:\n",
+      "2022-09-20 23:01:15,237 - SuPy - INFO -   Start: 2012-01-01 00:05:00\n",
+      "2022-09-20 23:01:15,238 - SuPy - INFO -   End: 2012-12-31 23:55:00\n",
+      "2022-09-20 23:01:15,238 - SuPy - INFO - \n",
+      "2022-09-20 23:01:15,239 - SuPy - INFO - No. of grids: 1\n",
+      "2022-09-20 23:01:15,239 - SuPy - INFO - SuPy is running in serial mode\n",
+      "2022-09-20 23:01:25,668 - SuPy - INFO - Execution time: 10.4 s\n",
+      "2022-09-20 23:01:25,668 - SuPy - INFO - ====================\n",
       "\n"
      ]
     }
@@ -989,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:15.633170Z",
@@ -1005,7 +962,7 @@
        "      dtype='object', name='group')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:15.685837Z",
@@ -1127,7 +1084,7 @@
        "ah_slope_heating (0,)                    2.7                 2.7"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1161,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:15.744639Z",
@@ -1435,7 +1392,7 @@
        "[5 rows x 924 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1455,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:15.783629Z",
@@ -1478,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:15.855675Z",
@@ -1605,7 +1562,7 @@
        "max       160.023207  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1632,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:15.895462Z",
@@ -1669,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:16.647173Z",
@@ -1710,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 60,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:22.916483Z",
@@ -1756,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:23.025489Z",
@@ -1781,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 62,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:23.486840Z",
@@ -1821,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 63,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:23.855977Z",
@@ -1854,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 64,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:24.205183Z",
@@ -1894,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 65,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:24.357219Z",
@@ -1915,7 +1872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 66,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:24.928216Z",
@@ -1929,7 +1886,7 @@
        "<AxesSubplot:title={'center':'Surface Energy Balance'}, xlabel='Month'>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1939,7 +1896,7 @@
        "<AxesSubplot:title={'center':'Surface Water Balance'}, xlabel='Month'>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2000,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 67,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:25.004764Z",
@@ -2454,7 +2411,7 @@
        "[105407 rows x 924 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2465,7 +2422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 68,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:02:35.665286Z",
@@ -2479,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 69,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-05T22:00:29.946829Z",
@@ -2491,13 +2448,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kc1_2012_DailyState.txt\n",
-      "Kc1_2012_SUEWS_60.txt\n",
-      "Kc1_2012_RSL_60.txt\n",
-      "Kc1_2012_BEERS_60.txt\n",
-      "Kc1_2012_debug_60.txt\n",
-      "Kc1_2012_ESTMExt_60.txt\n",
-      "InitialConditionsKc1_2013_EndofRun.nml\n"
+      "1_2012_DailyState.txt\n",
+      "1_2012_SUEWS_60.txt\n",
+      "1_2012_RSL_60.txt\n",
+      "1_2012_BEERS_60.txt\n",
+      "1_2012_debug_60.txt\n",
+      "1_2012_ESTMExt_60.txt\n",
+      "df_state.csv\n"
      ]
     }
    ],
